--- a/code/tube_board/Cargo.toml
+++ b/code/tube_board/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "vumeter_main"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["will <will@yager.io>"]
-edition = "2018"
+edition = "2021"
 keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
 #bin.path = "bin"
 #build = "build.rs"
@@ -12,20 +12,23 @@ keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
 #opt-level = "s"
 
 [dependencies]
-cortex-m = "~0.6"
-embedded-hal = "~0.2"
-nb = "~0.1"
+cortex-m = "0.7.4"
+embedded-hal = "0.2.7"
+nb = "1.0.0"
 #cortex-m-semihosting = "0.3.5"
 panic-halt = "~0.2"
-libm = "~0.2.1"
-cty = "~0.2.1"
+libm = "0.2.2"
+cty = "0.2.2"
 
-atsamd11c14a = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7db38ed"}
-samd11_bare = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7db38ed"}
-atsamd-hal = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7db38ed", features=["unproven"]}
+atsamd11c = "0.11.0"
+samd11_bare = "0.7.0"
+atsamd-hal = "0.15.0"
+#atsamd11c14a = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c"}
+#samd11_bare = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c"}
+#atsamd-hal = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c", features=["unproven"]}
 
 [build-dependencies]
-cc = "~1.0.48"
+cc = "1.0.73"
 
 
 [dependencies.vumeter_lib]
@@ -34,14 +37,14 @@ version = "~0.1"
 
 
 [dependencies.cortex-m-rt]
-version = "~0.6"
+version = "0.7.1"
 optional = true
 
 
 [features]
 # ask the HAL to enable atsamd11c14a support
-default = ["rt", "atsamd-hal/samd11c14a"]
-rt = ["cortex-m-rt", "atsamd-hal/samd11c14a-rt"]
+default = ["rt", "atsamd-hal/samd11c"]
+rt = ["cortex-m-rt", "atsamd-hal/samd11c-rt"]
 unproven = ["atsamd-hal/unproven"]
 use_semihosting = []
 
