--- a/code/tube_board/Cargo.toml
+++ b/code/tube_board/Cargo.toml
@@ -19,9 +19,10 @@ nb = "1.0.0"
 panic-halt = "~0.2"
 libm = "0.2.2"
 cty = "0.2.2"
+biquad = "0.4.2"
 
-atsamd11c = "0.11.0"
-samd11_bare = "0.7.0"
+atsamd11c = "0.12.0"
+samd11_bare = "0.8.0"
 atsamd-hal = "0.15.0"
 #atsamd11c14a = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c"}
 #samd11_bare = {git = "https://github.com/atsamd-rs/atsamd.git", rev = "7af79c"}
